# spotify-downloader

./: pyproject.toml
spotify-downloader/: main.py  pyproject.toml
