[project]
name = "spotify-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.9.0",
    "beautifulsoup4==4.13.5",
    "bs4==0.0.2",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "h11==0.14.0",
    "httpcore==0.16.3",
    "httpx==0.23.3",
    "idna==3.10",
    "innertube==2.1.19",
    "mediate==0.1.8",
    "mutagen==1.47.0",
    "pillow==11.3.0",
    "pymongo==4.13.2",
    "pyotp==2.9.0",
    "readerwriterlock==1.0.9",
    "redis==6.2.0",
    "requests==2.32.4",
    "rfc3986==1.5.0",
    "roster==0.1.11",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "spotapi==1.2.5",
    "tls-client==1.0.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "validators==0.35.0",
    "websockets==15.0.1",
    "yt-dlp==2025.11.12",
]
